--- a/src/index.css
+++ b/src/index.css
@@ -14,20 +14,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-} */
+
 /* regole generali */
 body {
   margin: 0;
-  /* display: flex;
-  place-items: center; */
-  /* min-width: 320px; */
   min-height: 100vh;
 }
 
@@ -51,7 +41,54 @@ header {
   gap: 15px;
 }
 
-button {
+/* regole main */
+
+main {
+  background-color: #151212;
+  color: white;
+  text-align: center;
+
+}
+
+/* regole sezione principale del main */
+.main-container {
+  padding: 3%;
+}
+
+
+/* regole shop-list(BLUE) */
+.shop-list {
+  background-color: rgb(25, 132, 204);
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 30px;
+}
+
+.shop-list a {
+  text-decoration: none;
+  list-style: none;
+  color: white;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -70,7 +107,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
