--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 /* regole root */
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -23,6 +24,7 @@ body {
 
 
 
+
 /* regole header */
 header {
   background-color: rgb(82, 214, 16);
@@ -34,11 +36,32 @@ header {
   /* text-align: center; */
 }
 
+header img {
+  max-width: 80%;
+}
+
 .lista-nav {
   list-style: none;
   display: flex;
   justify-content: center;
   gap: 15px;
+  /* padding: 30px; */
+
+}
+
+.lista-nav li {
+  min-height: 100%;
+  padding-top: 20px;
+}
+
+.lista-nav li:hover {
+  border-bottom: 3px solid black;
+}
+
+.lista-nav a {
+  text-decoration: none;
+  font-weight: bold;
+
 }
 
 /* regole main */
@@ -63,6 +86,14 @@ main {
   display: flex;
   justify-content: space-evenly;
   padding: 30px;
+}
+
+.shop-list img {
+  max-width: 30%;
+}
+
+.locatorimg {
+  max-width: 1%;
 }
 
 .shop-list a {
@@ -99,7 +130,12 @@ footer {
 }
 
 
-
+.registrationbutton {
+  color: rgb(26, 173, 40);
+  border-color: blue;
+  padding: 10px;
+  font-weight: bold;
+}
 
 
 
