--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 /* regole root */
 :root {
   font-family: "Open Sans", serif;
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -19,7 +18,7 @@
 /* regole generali */
 body {
   margin: 0;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 
