--- a/src/index.css
+++ b/src/index.css
@@ -72,15 +72,27 @@ main {
 
 }
 
-/* regole sezione principale del main */
+/* regole macroblocco principale del main */
+
 .main-container {
-  background-color: rgb(241, 155, 16);
   list-style: none;
+  width: 80%;
+  margin: 1% 10%;
   display: flex;
-  /* justify-content: space-evenly; */
-  padding: 30px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
+.main-container div {
+  width: 15%;
+  margin-bottom: 30px;
+
+}
+
+.comicimg {
+
+  max-width: 80%;
+}
 
 /* regole shop-list(BLUE) */
 .shop-list {
@@ -166,51 +178,3 @@ footer {
 .follow-us-section a {
   margin-top: 30px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-/* 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
-} */
