--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -22,17 +22,14 @@ body {
 }
 
 
-
-
 /* regole header */
 header {
-  background-color: rgb(82, 214, 16);
+  background-color: rgb(249, 254, 246);
   height: 130 px;
   min-width: 100%;
   display: flex;
   justify-content: space-between;
-  /* padding: 20px; */
-  /* text-align: center; */
+
 }
 
 header img {
@@ -44,6 +41,8 @@ header img {
   display: flex;
   justify-content: center;
   gap: 15px;
+  color: darkgray;
+
   /* padding: 30px; */
 
 }
@@ -51,6 +50,8 @@ header img {
 .lista-nav li {
   min-height: 100%;
   padding-top: 20px;
+
+
 }
 
 .lista-nav li:hover {
@@ -108,7 +109,12 @@ main {
 }
 
 .locatorimg {
-  max-width: 1%;
+  width: 50px;
+}
+
+.visaimg {
+  width: 150px;
+
 }
 
 .shop-list a {
@@ -130,8 +136,7 @@ footer {
   display: flex;
   width: 37%;
   flex-wrap: wrap;
-  /* DEBUG */
-  /* background-color: yellow; */
+
 }
 
 .linkutili-footer ul {
