--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,20 @@ main {
 
 }
 
+/* regole jumbotron */
+.jumbotron {
+  height: 300px;
+  background-image: url(./assets/img/jumbotron.jpg);
+  background-repeat: no-repeat;
+}
+
+.jumbotron div {
+  background-color: blue;
+  width: 70px;
+  padding: 3px 16px;
+
+}
+
 /* regole macroblocco principale del main */
 
 .main-container {
